--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<meta name="keywords" content="CatSense, CatSense Reborn, KtntKot">
 		<meta name="author" content="KtntKot">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="CatSense Reborn" />
+		<meta property="og:description" content="Advanced hacked client by KtntKot" />
+		<meta property="og:url" content="https://ktntkot.xyz/" />
+		<meta property="og:image" content="img/icon.png" />
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<link rel="stylesheet" href="style.css">
 		<title>CatSense Reborn</title>
