--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="CatSense Reborn" />
 		<meta property="og:description" content="Advanced hacked client by KtntKot" />
-		<meta property="og:url" content="https://ktntkot.xyz/" />
+		<meta property="og:url" content="http://ktntkot.xyz/" />
 		<meta property="og:image" content="img/icon.png" />
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<link rel="stylesheet" href="style.css">
