--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 		<meta name="author" content="KtntKot">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:type" content="website">
-		<meta property="og:site_name" content="CatSense">
-		<meta property="og:title" content="CatSense Reborn">
-		<meta property="og:description" content="Advanced hacked client by KtntKot">
-		<meta property="og:url" content="https://ktntkot.xyz/">
-		<meta property="og:image" content="https://ktntkot.xyz/img/icon.png">
+		<meta property="og:title" content="CatSense Reborn" />
+		<meta property="og:description" content="Advanced hacked client by KtntKot" />
+		<meta property="og:url" content="https://ktntkot.xyz/" />
+		<meta property="og:image" content="img/icon.png" />
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<link rel="stylesheet" href="style.css">
 		<title>CatSense Reborn</title>
@@ -23,7 +22,7 @@
 		</video>
 		<div class="header">
 			<h1>catsense</h1>
-			<h3>discord: soon</h3>
+			<h3><a href="https://discord.gg/x8nbV3YYRT" target="_blank">discord: soon</a></h3>
 		</div>
 	</body>
 </html>
