--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
 		<meta name="author" content="KtntKot">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="CatSense Reborn" />
-		<meta property="og:description" content="Advanced hacked client by KtntKot" />
-		<meta property="og:url" content="https://ktntkot.xyz/" />
-		<meta property="og:image" content="img/icon.png" />
+		<meta property="og:title" content="CatSense Reborn">
+		<meta property="og:description" content="Advanced hacked client by KtntKot">
+		<meta property="og:url" content="https://ktntkot.xyz/">
+		<meta property="og:image" content="img/icon.png">
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<link rel="stylesheet" href="style.css">
 		<title>CatSense Reborn</title>
 	</head>
 	<body>
-		<video autoplay muted loop id="catsense">
-			<source src="https://mirror.racisz.in/smietnik/ktttkot%20opowiada%20o%20sobie/%F0%9D%91%B2urwa%20Ale%20Wasi%20%5BeucKXNSYEbk%5D.mp4" type="video/mp4">
-			Your browser does not support HTML5 video.
-		</video>
-		<div class="header">
-			<h1>catsense</h1>
-			<h3><a href="https://discord.gg/x8nbV3YYRT" target="_blank">discord: soon</a></h3>
+		<div class="start">
+			<video autoplay muted loop id="catsense">
+				<source src="https://mirror.racisz.in/smietnik/ktttkot%20opowiada%20o%20sobie/%F0%9D%91%B2urwa%20Ale%20Wasi%20%5BeucKXNSYEbk%5D.mp4" type="video/mp4">
+				Your browser does not support HTML5 video.
+			</video>
+			<div class="header">
+				<div class="box">
+					<h1>catsense</h1>
+					<a href="https://discord.gg/oneoneone" target="_blank"><button id="discord"><span>join discord</span></button></a>
+					<br>
+					<a href="https://yip.su/catsense"><button id="client"><span>release soon</span><br>Version: 1.0.0</button></a>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
