--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h1>catsense</h1>
 					<a href="https://discord.gg/oneoneone" target="_blank"><button id="discord"><span>join discord</span></button></a>
 					<br>
-					<a href="https://yip.su/catsense"><button id="client"><span>release soon</span><br>Version: 1.0.0</button></a>
+					<a href="https://yip.su/catsense"><button id="client"><span>check status</span><br>Checker Version: 1.0.0</button></a>
 				</div>
 			</div>
 		</div>
