--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta name="author" content="KtntKot">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="CatSense Reborn">
-		<meta property="og:description" content="Advanced hacked client by KtntKot">
+		<meta property="og:title" content="Domain seized">
+		<meta property="og:description" content="This website has been sized by FBI">
 		<meta property="og:url" content="https://ktntkot.xyz/">
 		<meta property="og:image" content="img/icon.png">
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
