--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 		<title>CatSense Reborn</title>
 	</head>
 	<body>
-		<Strong>Coming Soon...</strong>
+		<strong>Coming Soon...</strong>
 	</body>
 </html>
