--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:image" content="img/icon.png">
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<link rel="stylesheet" href="style.css">
-		<title>CatSense Reborn</title>
+		<title>Oskar Archive</title>
 	</head>
 	<body>
 		<strong>Coming Soon...</strong>
