--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Ktnt Archive">
-		<meta property="og:description" content="Archiwum z kicia/owas komunit">
+		<meta property="og:description" content="Archiwum z kicia/owas komunit [podruba (nie druba) mirror.racisz.in]">
 		<meta property="og:url" content="https://ktntkot.xyz/">
-		<meta property="og:image" content="img/icon.png">
+		<meta property="og:image" content="https://mirror.racisz.in/smietnik/oskar.png"/>
 		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<link rel="stylesheet" href="style.css">
 		<title>Oskar Archive</title>
