--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:description" content="Archiwum z kicia/owas komunit [podruba (nie druba) mirror.racisz.in]">
 		<meta property="og:url" content="https://ktntkot.xyz/">
 		<meta property="twitter:card" content="https://mirror.racisz.in/smietnik/oskar.png">
-		<link rel="icon" type="image/x-icon" href="img/icon.png">
+		<link rel="icon" type="image/x-icon" href="img/1784897.png">
 		<link rel="stylesheet" href="style.css">
 		<title>Oskar Archive</title>
 	</head>
