--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<meta property="og:title" content="Ktnt Archive">
 		<meta property="og:description" content="Archiwum z kicia/owas komunit [podruba (nie druba) mirror.racisz.in]">
 		<meta property="og:url" content="https://ktntkot.xyz/">
-		<meta property="twitter:card" content="https://mirror.racisz.in/smietnik/oskar.png">
+		<meta property="og:image" content="https://mirror.racisz.in/smietnik/oskar.png">
+		<meta property="og:image:width" content="400" />
+		<meta property="og:image:height" content="300" />
 		<link rel="icon" type="image/x-icon" href="img/1784897.png">
 		<link rel="stylesheet" href="style.css">
 		<title>Oskar Archive</title>
